--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "author": "gustavo",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "mongodb": "^6.1.0",
     "nodemon": "^3.0.1"
   }
 }
