--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "mongodb": "^6.1.0",
     "nodemon": "^3.0.1"
   }
 }
