--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "echo \"Error: no teste speficied\" && exit 1",
     "start-prod": "node server.js"
   },
+  "engines": {
+    "node": ">=18 <19"   
+  },
   "repository": {
     "type": "git",
     "url": "git"
