--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start-prod": "node server.js"
   },
   "engines": {
-    "node": ">=18 <19"   
+    "node": ">=18 <19"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
     "nodemon": "^3.0.1"
